--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "antd": "^3.0.3",
     "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
